clusters/on-prem-cluster/apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:latest
        ports:
        - containerPort: 8096
        volumeMounts:
          - name: config
            mountPath: /config
          - name: tvshows
            mountPath: /tvshows
          - name: movies
            mountPath: /movies
          - name: music
            mountPath: /music
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-pvc
        - name: tvshows
          hostPath:
            path: /mnt/media/tvshows
        - name: movies
          hostPath:
            path: /mnt/media/movies
        - name: music
          hostPath:
            path: /mnt/media/music
